--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -60,13 +60,24 @@
 $white: #fff;
 $lightGrey: #e9e9e9;
 $midGrey: #d3d3d3;
-$darkGrey: #807c79;
+$darkGrey: #5B5B5B;
 $green: #008000;
 
-$cobaltBlue1: #6091D5;
-$cobaltBlue2: #0048AB;
-$cobaltBlue3: #204980;
-$cobaltBlue4: #002F6F;
+
+
+
+// $cobaltBlue1: #6091D5;
+// $cobaltBlue2: #0048AB;
+// $cobaltBlue3: #204980;
+// $cobaltBlue4: #002F6F;
+
+/* Testing blue */
+$pastilleGreen1: #67DB88;
+$pastilleGreen2: #7CCB93; // Light green
+$pastilleGreen3: #4D9E69; // Dark green
+
+
+
 
 
 /* Globals */
@@ -76,25 +87,26 @@ $globalBackgroundColor: $lightGrey;
 
 /* Cobalt Blue Scheme */
 $currentBackgroundColor: $globalBackgroundColor;
-$currentNavigationBackgroundColor: $cobaltBlue3;
-$currentNavigationBackgroundItemActiveColor: $cobaltBlue3;
-$currentTextColour: $white;
-$currentTextColorActive: $white;
-$currentAnchorColor: $white;
-$currentHintColor: $cobaltBlue4;
-$currentHeaderColor: $cobaltBlue4;
-$currentTopLevelPaneHeaderBackgroundColor: $cobaltBlue4;
-$currentTopLevelPaneBodyBackgroundColor: $cobaltBlue2;
+$currentNavigationBackgroundColor: $pastilleGreen3;
+$currentNavigationBackgroundItemActiveColor: $pastilleGreen3;
+$currentTextColour: $darkGrey;
+$currentTextColorActive: $darkGrey;
+$currentAnchorColor: $darkGrey;
+$currentHintColor: $pastilleGreen3;
+$currentHeaderColor: $pastilleGreen3;
+$currentTopLevelPaneHeaderBackgroundColor: $pastilleGreen3;
+$currentTopLevelPaneBodyBackgroundColor: $pastilleGreen2;
 $currentTopLevelPaneBorderColor: $white;
-$currentSecondLevelPaneHeaderBackgroundColor: $cobaltBlue4;
+$currentSecondLevelPaneHeaderBackgroundColor: $pastilleGreen3;
 $currentSecondLevelPaneBodyBackgroundColor: $globalBackgroundColor;
 // $currentThirdLevelPaneHeaderBackgroundColor: #000 //Not currently set
-$currentThirdLevelPaneBodyBackgroundColor: $cobaltBlue3;
+$currentThirdLevelPaneBodyBackgroundColor: $pastilleGreen3;
 $titleBarOffset: $darkGrey;
-$currentPlanBackGroundColor: $cobaltBlue1;
+$currentPlanBackGroundColor: $pastilleGreen1;
 $currentGlobalBorderColor: $midGrey;
 $currentNumberColor: $darkGrey;
-$currentBreadcrumbColor: $cobaltBlue4;
+$currentBreadcrumbColor: $pastilleGreen3;
+$currentPostBackgroundColor: $pastilleGreen2;
 $complete: $green;
 
 
@@ -136,3 +148,5 @@ $thirdLevelPaneBodyBackgroundColor: $currentThirdLevelPaneBodyBackgroundColor;
 // $thirdLevelPaneBodyBackgroundColorActive: #000; Not currently set
 
 $planBackgroundColor: $currentPlanBackGroundColor;
+
+$postBackgroundColor: $currentPostBackgroundColor;
