Implemented select2 for creating campaigns, implemented following system

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3759,7 +3759,7 @@ table.hover tbody tr:nth-of-type(even):hover {
   color: #fefefe;
   padding: 1.5rem; }
   .title-bar.transparent {
-    background: transparent; }
+    background: rgba(0, 0, 0, 0.5); }
   .title-bar::before, .title-bar::after {
     content: ' ';
     display: table; }
@@ -4451,6 +4451,12 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: transparent;
   position: relative; }
 
+.parallax-window.large {
+  min-height: 800px; }
+
+.parallax-window.extra.large {
+  height: 100%; }
+
 body {
   background: #e9e9e9; }
   body .title-bar {
@@ -4458,7 +4464,7 @@ body {
     color: #fefefe;
     padding: 1.5rem; }
     body .title-bar.transparent {
-      background: transparent; }
+      background: rgba(0, 0, 0, 0.5); }
     body .title-bar::before, body .title-bar::after {
       content: ' ';
       display: table; }
@@ -4496,6 +4502,8 @@ body {
     padding: 0.6rem; }
   body .full-width {
     width: 100%; }
+  body .select2 {
+    width: 100% !important; }
   body .global-spacing.top {
     margin-top: 1rem; }
   body .global-spacing.right {
@@ -4523,7 +4531,7 @@ body {
     body .secondary-nav a.active {
       color: #fefefe; }
   body .homepage-content {
-    top: 100%;
+    top: 88%;
     width: 100%;
     position: absolute; }
     body .homepage-content h2, body .homepage-content h3 {
@@ -4536,6 +4544,8 @@ body {
       border-top-color: #67DB88;
       border-bottom-width: 5px;
       border-top-width: 5px;
+      color: #fefefe; }
+    body .homepage-content a, body .homepage-content p, body .homepage-content div {
       color: #fefefe; }
   body .title-bar {
     transition: all 500ms ease;
@@ -4559,6 +4569,8 @@ body {
     position: fixed;
     width: 100%;
     z-index: 1000; }
+    body #header-bar.homepage .title-bar a, body #header-bar.homepage .title-bar p {
+      color: #fefefe; }
   body .header .home-logo a {
     display: block;
     margin-top: -25px;
@@ -4586,12 +4598,14 @@ body {
     text-align: center;
     top: 200px;
     position: relative;
-    height: 100%;
-    color: #002F6F; }
+    height: 100%; }
     body .icon-container .fa {
-      font-size: 7rem; }
+      font-size: 7rem;
+      color: #4D9E69; }
     body .icon-container.primary {
       top: 110px; }
+  body .large .icon-container {
+    top: 350px; }
   body .overlay {
     height: 100%;
     position: absolute;
@@ -4775,10 +4789,22 @@ body {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABZJREFUeNpi2r9//38gYGAEESAAEGAAasgJOgzOKCoAAAAASUVORK5CYII=);
   width: 100%;
   height: 100%;
-  background-color: rgba(127, 127, 127, 0.5); }
+  background-color: rgba(127, 127, 127, 0.5);
+  z-index: 10; }
+  .cover .play-container {
+    position: absolute;
+    top: 66%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 8rem;
+    text-align: center;
+    color: white; }
+    .cover .play-container a {
+      color: white;
+      font-weight: 100; }
   .cover .hi {
     position: absolute;
-    top: 50%;
+    top: 36%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fefefe;
@@ -4826,5 +4852,8 @@ body {
   padding: 10px; }
   .follow-search ul li {
     cursor: pointer; }
+
+#pie svg {
+  margin-left: -33px; }
 
 /*# sourceMappingURL=main.css.map */
