--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -107,6 +107,7 @@ $currentGlobalBorderColor: $midGrey;
 $currentNumberColor: $darkGrey;
 $currentBreadcrumbColor: $pastilleGreen3;
 $currentPostBackgroundColor: $pastilleGreen2;
+$currentHomepageIconColour: $pastilleGreen3;
 $complete: $green;
 
 
@@ -150,3 +151,5 @@ $thirdLevelPaneBodyBackgroundColor: $currentThirdLevelPaneBodyBackgroundColor;
 $planBackgroundColor: $currentPlanBackGroundColor;
 
 $postBackgroundColor: $currentPostBackgroundColor;
+
+$homepageIconColour: $currentHomepageIconColour;
