--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,13 @@
     position: relative;
 }
 
+.parallax-window.large {
+  min-height: 800px;
+}
+
+.parallax-window.extra.large {
+  height: 100%;
+}
 
 body {
     @include foundation-title-bar
@@ -47,6 +54,9 @@ body {
     }
     .full-width {
         width: 100%;
+    }
+    .select2 {
+        width: 100% !important;
     }
     .global-spacing {
         &.top {
@@ -89,7 +99,7 @@ body {
         }
     }
     .homepage-content {
-        top: 100%;
+        top: 88%;
         width:100%;
         position: absolute;
         h2, h3 {
@@ -103,6 +113,9 @@ body {
             border-bottom-width: 5px;
             border-top-width: 5px;
             color: $white;
+        }
+        a, p, div {
+          color: $white;
         }
     }
 
@@ -139,6 +152,11 @@ body {
             position: fixed;
             width: 100%;
             z-index:1000;
+            .title-bar {
+              a, p {
+                color: $white;
+              }
+            }
         }
     }
 
@@ -188,12 +206,17 @@ body {
         top: 200px;
         position: relative;
         height: 100%;
-        color: #002F6F;
         .fa {
             font-size: 7rem;
+            color: $homepageIconColour;
         }
         &.primary {
             top:110px;
+        }
+    }
+    .large {
+        .icon-container {
+            top: 350px;
         }
     }
 
@@ -464,28 +487,34 @@ body {
 }
 
 
-
-
-
-
-
-
 .cover {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABZJREFUeNpi2r9//38gYGAEESAAEGAAasgJOgzOKCoAAAAASUVORK5CYII=);
-
-
-
   width: 100%;
   height: 100%;
   background-color: rgba(127, 127, 127, 0.5);
+  z-index:10;
+
+  .play-container {
+      position: absolute;
+      top: 66%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 8rem;
+      text-align: center;
+      color: white;
+      a {
+          color: white;
+          font-weight: 100;
+      }
+  }
 
   .hi {
     position: absolute;
-    top: 50%;
+    top: 36%;
     left: 50%;
     transform: translate(-50%,-50%);
 
@@ -553,5 +582,11 @@ body {
     li {
       cursor: pointer;
     }
+  }
+}
+
+#pie {
+  svg {
+    margin-left: -33px;
   }
 }
