--- a/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
+++ b/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
@@ -41,7 +41,7 @@ $titlebar-icon-spacing: 0.25rem !default;
     color: $titlebar-color;
     padding: $titlebar-padding;
     &.transparent {
-        background: transparent;
+        background: rgba(0,0,0,0.5);
     }
 
     @if $global-flexbox {
