Implemented select2 for creating campaigns, implemented following system

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4769,6 +4769,10 @@ body {
     padding: 0; }
   body .posts .post-inner {
     padding: 15px; }
+  body .posts .contact {
+    padding: 15px; }
+    body .posts .contact .submit {
+      width: 100%; }
   body .posts .post-inner h3 {
     color: white;
     padding-bottom: 20px;
