--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -465,6 +465,13 @@ body {
             padding: 15px;
         }
 
+        .contact {
+            padding: 15px;
+            .submit {
+                width: 100%;
+            }
+        }
+
         .post-inner h3 {
             color: white;
             padding-bottom: 20px;
