--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -25,9 +25,7 @@
 
 body {
     @include foundation-title-bar
-    // background: $bodyBackgroundColor;
 
-    background: url(https://www.xmple.com/wallpaper/linear-highlight-black-white-gradient-1920x1080-c2-000000-f8f8ff-l-67-a-30-f-21.svg) no-repeat;
     background-position: center center;
     background-attachment: fixed;
     h1 {
@@ -265,51 +263,111 @@ body {
     }
 
     .panes {
+        .grid-sizer, .grid-item {
+          width: 49%;
+        }
+        .mission {
+          width: 49%;
+          margin-bottom: 1rem;
+          background: white;
+        }
+        .container {
+          width: 260px;
+          height: 260px;
+          position: relative;
+          margin: auto;
+          font-family: 'Share Tech', sans-serif;
+          color: #444;
+          margin-top: 2rem;
+          margin-bottom: 3rem;
+        }
+
+        #percent, svg, #title {
+          width: 260px;
+          height: 260px;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+
+        #percent, #title {
+          line-height: 20px;
+          height: 20px;
+          width: 100%;
+          top: 120px;
+          font-size: 43px;
+          text-align: center;
+          color: #3da08d;
+          opacity: 0.8
+        }
+
+        p, .btn {
+          position: relative;
+          left: 220px;
+          width: 200px;
+          display: block;
+          text-transform: uppercase;
+          font-size: 24px;
+          top: 30px;
+        }
+
+        .btn {
+          text-align: center;
+          background: #5fc2af;
+          color: #fff;
+          width: 120px;
+          height: 37px;
+          line-height: 37px;
+          cursor: pointer;
+        }
+
+        input {
+          border: 0;
+          outline: 0;
+          border-bottom: 1px solid #eee;
+          width: 30px;
+          font-size: 24px;
+          text-transform: capitalise;
+          background: transparent;
+        }
+
         .column {
             margin-bottom: 2rem;
         }
 
         .inner-column {
-            border: 1px solid $pastilleGreen3;
+            border: 1px solid $lightGrey;
+            border-bottom: 10px solid $pastilleGreen3;
             border-radius: 0;
             position: relative;
             transition: all 400ms ease;
             &.active-child {
                 transform: scale(1.1,1.1);
                 color: $textColorActive;
-                .completeness {
-                    background: $pastilleGreen1;
-                }
+
             }
         }
-        .title {
-            background-color: $topLevelPaneHeaderBackgroundColor;
+
+        .panel-main-container {
             text-align: center;
+        }
+        .title {
             padding:1rem;
-            color: $white;
+            font-size: 1.5rem;
+            .fa-filter {
+                float: right;
+            }
         }
         .completeness {
-            background-color: $topLevelPaneBodyBackgroundColor;
-            text-align: center;
-            font-size:6rem;
-            padding:1rem;
+            font-size:3rem;
         }
 
-        .listing-wrapper {
-            padding:15px;
-            background: $white;
-        }
         .listing {
             counter-reset: li;
             margin-left: 0;
             padding-left: 0;
             padding:15px;
-            background-color:$globalBackgroundColor;
             margin-bottom: 0;
-            border: 1px solid rgba(10, 10, 10, 0.25);
-        }
-
-        .listing {
             > li {
                 position: relative;
                 margin: 0 0 6px 2em;
@@ -319,6 +377,25 @@ body {
             }
             > li:last-child {
                 border-bottom: none;
+            }
+            > li:before {
+                content:counter(li);
+                counter-increment:li;
+                position:absolute;
+                top:-2px;
+                left: -2.3em;
+                box-sizing:border-box;
+                width:2em;
+                margin-right:8px;
+                padding: 4px;
+                border: 2px solid $globalBorderColor;
+                color: $numberColor;
+                background: $white;
+                font-weight:bold;
+                text-align: center;
+                border-radius:20px;
+                top: 26%;
+                width: 37px;
             }
         }
 
@@ -346,26 +423,7 @@ body {
             font-size: 2.5rem;
             color: $hintColor;
             float: right;
-        }
-
-        .listing > li:before {
-            content:counter(li);
-            counter-increment:li;
-            position:absolute;
-            top:-2px;
-            left: -2.3em;
-            box-sizing:border-box;
-            width:2em;
-            margin-right:8px;
-            padding: 4px;
-            border: 2px solid $globalBorderColor;
-            color: $numberColor;
-            background: $white;
-            font-weight:bold;
-            text-align: center;
-            border-radius:20px;
-            top: 26%;
-            width: 37px;
+            width: 40px;
         }
 
         .alert {
@@ -383,7 +441,6 @@ body {
             }
         }
 
-
         .start {
             font-size: 2rem;
         }
@@ -396,39 +453,32 @@ body {
     }
 
     .posts {
-
         .portfolioFilter {
-          margin-bottom: 15px;
+            margin-bottom: 15px;
+            a {
+                margin-right: 10px;
+              	color:#666;
+              	text-decoration:none;
+                transition: all 0.5s ease;
+                font-size: 2rem;
+            }
+            a:link, a:visited {
+                background-color: $pastilleGreen1;
+                color: white;
+                padding: 14px 25px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+            }
+            a:hover {
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+                background-color: $pastilleGreen3;
+                color: $white;
+            }
+            a.current {
+                font-weight:bold;
+            }
         }
-
-        .portfolioFilter a {
-            margin-right: 10px;
-        	color:#666;
-        	text-decoration:none;
-          transition: all 0.5s ease;
-          font-size: 2rem;
-        }
-
-        .portfolioFilter a:link, a:visited {
-          background-color: $pastilleGreen1;
-          color: white;
-          padding: 14px 25px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-        }
-
-        .portfolioFilter a:hover {
-          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-          background-color: $pastilleGreen3;
-          color: $white;
-        }
-
-
-        .portfolioFilter a.current {
-            font-weight:bold;
-        }
-
 
         img {
             margin:5px;
@@ -443,8 +493,6 @@ body {
         }
         .isotope,
         .isotope .isotope-item {
-          /* change duration value to whatever you like */
-
             -webkit-transition-duration: 0.8s;
             -moz-transition-duration: 0.8s;
             transition-duration: 0.8s;
@@ -463,10 +511,6 @@ body {
         .columns {
             padding: 0;
         }
-        .columns:not(.chat) {
-          background: $pastilleGreen3;
-        }
-
 
         .post-inner {
             padding: 15px;
@@ -485,7 +529,6 @@ body {
             margin-bottom: 20px;
             border-bottom: 1px solid $pastilleGreen3;
         }
-
 
         .listing {
             list-style-type: none;
@@ -642,31 +685,6 @@ Body
 *::after {
   box-sizing: border-box;
 }
-
-// html,
-// body {
-//   height: 100%;
-// }
-//
-// body {
-//   background: linear-gradient(135deg, #044f48, #2a7561);
-//   background-size: cover;
-//   font-family: 'Open Sans', sans-serif;
-//   font-size: 12px;
-//   line-height: 1.3;
-//   overflow: hidden;
-// }
-
-// .bg {
-//   width: 100%;
-//   height: 100%;
-//   top: 0;
-//   left: 0;
-//   z-index: 1;
-//   background: url('https://images.unsplash.com/photo-1451186859696-371d9477be93?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925') no-repeat 0 0;
-//   filter: blur(80px);
-//   transform: scale(1.2);
-// }
 
 
 /*--------------------
