--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -263,10 +263,83 @@ body {
     }
 
     .panes {
+
+
+
+
+
+
+      $color: #e55454;
+
+      .cross__svg {
+          border-radius: 50%;
+          display: block;
+          height: 100%;
+          stroke-width: 4;
+          width: 100%;
+      }
+
+      .cross__circle {
+          animation: 1.6s ease 0s normal forwards 1 running stroke;
+          fill: none;
+          margin: 0 auto;
+          stroke: $color;
+          stroke-dasharray: 166;
+          stroke-dashoffset: 166;
+          stroke-width: 3;
+      }
+
+      .cross__path {
+          stroke: $color;
+          stroke-dasharray: 48;
+          stroke-dashoffset: 48;
+          transform-origin: 50% 50% 0;
+          &--right {
+            animation: 0.8s ease 1.3s normal forwards 1 running stroke;
+          }
+          &--left {
+            animation: 1s ease 1.3s normal forwards 1 running stroke;
+          }
+      }
+
+      @keyframes stroke {
+        100% {
+          stroke-dashoffset: 0;
+        }
+      }
+
+
+
+
+
+        .circ{
+          opacity: 0;
+          stroke-dasharray: 130;
+          stroke-dashoffset: 130;
+          -webkit-transition: all 3s;
+          -moz-transition: all 3s;
+          -ms-transition: all 3s;
+          -o-transition: all 3s;
+          transition: all 3s;
+        }
+        .tick{
+          stroke-dasharray: 50;
+          stroke-dashoffset: 50;
+          -webkit-transition: stroke-dashoffset 3s 0.5s ease-out;
+          -moz-transition: stroke-dashoffset 3s 0.5s ease-out;
+          -ms-transition: stroke-dashoffset 3s 0.5s ease-out;
+          -o-transition: stroke-dashoffset 3s 0.5s ease-out;
+          transition: stroke-dashoffset 3s 0.5s ease-out;
+        }
+        .drawn + svg .path{
+          opacity: 1;
+          stroke-dashoffset: 0;
+        }
+
         .grid-sizer, .grid-item {
           width: 49%;
         }
-        .mission {
+        .pane {
           width: 49%;
           margin-bottom: 1rem;
           background: white;
@@ -282,7 +355,7 @@ body {
           margin-bottom: 3rem;
         }
 
-        #percent, svg, #title {
+        #percent, svg, #title, .svg-pie-percent {
           width: 260px;
           height: 260px;
           position: absolute;
@@ -290,7 +363,7 @@ body {
           left: 0;
         }
 
-        #percent, #title {
+        #percent, #title, .svg-pie-percent {
           line-height: 20px;
           height: 20px;
           width: 100%;
@@ -921,7 +994,7 @@ Message Box
     padding: 6px 10px;
     border-radius: 10px;
     outline: none!important;
-    transition: background .2s ease;
+    transition: background .3s ease;
 
     &:hover {
       background: #1D7745;
