--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -458,29 +458,29 @@ body {
     .posts {
         .portfolioFilter {
             margin-bottom: 15px;
-            a {
-                margin-right: 10px;
-              	color:#666;
-              	text-decoration:none;
-                transition: all 0.5s ease;
-                font-size: 2rem;
-            }
-            a:link, a:visited {
-                background-color: $pastilleGreen1;
-                color: white;
-                padding: 14px 25px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-            }
-            a:hover {
-                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-                background-color: $pastilleGreen3;
-                color: $white;
-            }
-            a.current {
-                font-weight:bold;
-            }
+            // a {
+            //     margin-right: 10px;
+            //   	color:#666;
+            //   	text-decoration:none;
+            //     transition: all 0.5s ease;
+            //     font-size: 2rem;
+            // }
+            // a:link, a:visited {
+            //     background-color: $pastilleGreen1;
+            //     color: white;
+            //     padding: 14px 25px;
+            //     text-align: center;
+            //     text-decoration: none;
+            //     display: inline-block;
+            // }
+            // a:hover {
+            //     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+            //     background-color: $pastilleGreen3;
+            //     color: $white;
+            // }
+            // a.current {
+            //     font-weight:bold;
+            // }
         }
 
         img {
@@ -543,6 +543,134 @@ body {
                 padding: 15px;
             }
         }
+
+
+
+        .wrapper{
+          margin:1em;
+        }
+        a,a:visited,a:hover,a:active{
+          -webkit-backface-visibility:hidden;
+                  backface-visibility:hidden;
+        	position:relative;
+          transition:0.5s color ease;
+        	text-decoration:none;
+        	color:$pastilleGreen3;
+        	font-size:2.5em;
+        }
+        a:hover{
+        	color:$pastilleGreen1;
+        }
+        a.before:before,a.after:after{
+          content: "";
+          transition:0.5s all ease;
+          -webkit-backface-visibility:hidden;
+                  backface-visibility:hidden;
+          position:absolute;
+        }
+        a.before:before{
+          top:-0.25em;
+        }
+        a.after:after{
+          bottom:-0.25em;
+        }
+        a.before:before,a.after:after{
+          height:5px;
+          height:0.35rem;
+          width:0;
+          background:$pastilleGreen1;
+        }
+        a.first:after{
+          left:0;
+        }
+        a.second:after{
+          right:0;
+        }
+        a.third:after,a.sixth:before,a.sixth:after{
+          left:50%;
+          -webkit-transform:translateX(-50%);
+                  transform:translateX(-50%);
+        }
+        a.fourth:before,a.fourth:after{
+          left:0;
+        }
+        a.fifth:before,a.fifth:after{
+          right:0;
+        }
+        a.seventh:before{
+          right:0;
+        }
+        a.seventh:after{
+          left:0;
+        }
+        a.eigth:before{
+          left:0;
+        }
+        a.eigth:after{
+          right:0;
+        }
+        a.before:hover:before,a.after:hover:after{
+          width:100%;
+        }
+        .square{
+          box-sizing:border-box;
+          margin-left:-0.4em;
+          position:relative;
+          font-size:2.5em;
+          overflow:hidden;
+        }
+        .square a{
+          position:static;
+          font-size:100%;
+          padding:0.2em 0.4em;
+        }
+        .square:before,.square:after{
+          content: "";
+          box-sizing:border-box;
+          transition:0.25s all ease;
+          -webkit-backface-visibility:hidden;
+                  backface-visibility:hidden;
+          position:absolute;
+          width:5px;
+          width:0.35rem;
+          height:0;
+          background:$pastilleGreen1;
+        }
+        .square:before{
+          left:0;
+          bottom:-0.2em;
+        }
+        .square.individual:before{
+          transition-delay:0.6s;
+        }
+        .square:after{
+          right:0;
+          top:-0.2em;
+        }
+        .square.individual:after{
+          transition-delay:0.2s;
+        }
+        .square a:before{
+          left:0;
+          transition:0.25s all ease;
+        }
+        .square a:after{
+          right:0;
+          transition:0.25s all ease;
+        }
+        .square.individual a:after{
+          transition:0.25s all ease 0.4s;
+        }
+        .square:hover:before,.square:hover:after{
+          height:calc(100% + 0.4em);
+        }
+        .square:hover a:before,.square:hover a:after{
+          width:100%;
+        }
+
+
+
+
     }
 }
 
