--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4484,17 +4484,15 @@ body {
     vertical-align: middle;
     display: inline-block; }
   body h1 {
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
     font-size: 3rem;
-    padding: 30px 50px 40px 50px;
+    padding: 30px;
     text-align: center;
     text-transform: uppercase;
     text-rendering: optimizeLegibility; }
     body h1.elegantshadow {
       color: #131313;
       background-color: #e7e5e4;
-      letter-spacing: .15em;
-      text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2; }
+      letter-spacing: .15em; }
     body h1.deepshadow {
       color: #e0dfdc;
       background-color: #333;
@@ -4658,13 +4656,13 @@ body {
     margin-bottom: 1rem; }
   body .delete form {
     margin-top: -45px; }
-  body .panes .cross__svg {
+  body .cross__svg {
     border-radius: 50%;
     display: block;
-    height: 100%;
+    height: 89%;
     stroke-width: 4;
-    width: 100%; }
-  body .panes .cross__circle {
+    width: 89%; }
+  body .cross__circle {
     animation: 1.6s ease 0s normal forwards 1 running stroke;
     fill: none;
     margin: 0 auto;
@@ -4672,20 +4670,20 @@ body {
     stroke-dasharray: 166;
     stroke-dashoffset: 166;
     stroke-width: 3; }
-  body .panes .cross__path {
+  body .cross__path {
     stroke: #e55454;
     stroke-dasharray: 48;
     stroke-dashoffset: 48;
     transform-origin: 50% 50% 0; }
-    body .panes .cross__path--right {
+    body .cross__path--right {
       animation: 0.8s ease 1.3s normal forwards 1 running stroke; }
-    body .panes .cross__path--left {
+    body .cross__path--left {
       animation: 1s ease 1.3s normal forwards 1 running stroke; }
 
 @keyframes stroke {
   100% {
     stroke-dashoffset: 0; } }
-  body .panes .circ {
+  body .circ {
     opacity: 0;
     stroke-dasharray: 130;
     stroke-dashoffset: 130;
@@ -4694,7 +4692,7 @@ body {
     -ms-transition: all 3s;
     -o-transition: all 3s;
     transition: all 3s; }
-  body .panes .tick {
+  body .tick {
     stroke-dasharray: 50;
     stroke-dashoffset: 50;
     -webkit-transition: stroke-dashoffset 3s 0.5s ease-out;
@@ -4702,16 +4700,16 @@ body {
     -ms-transition: stroke-dashoffset 3s 0.5s ease-out;
     -o-transition: stroke-dashoffset 3s 0.5s ease-out;
     transition: stroke-dashoffset 3s 0.5s ease-out; }
-  body .panes .drawn + svg .path {
+  body .drawn + svg .path {
     opacity: 1;
     stroke-dashoffset: 0; }
-  body .panes .grid-sizer, body .panes .grid-item {
+  body .grid-sizer, body .grid-item {
     width: 49%; }
-  body .panes .pane {
+  body .pane {
     width: 49%;
     margin-bottom: 1rem;
     background: white; }
-  body .panes .container {
+  body .container {
     width: 260px;
     height: 260px;
     position: relative;
@@ -4720,13 +4718,13 @@ body {
     color: #444;
     margin-top: 2rem;
     margin-bottom: 3rem; }
-  body .panes #percent, body .panes svg, body .panes #title, body .panes .svg-pie-percent {
+  body #percent, body svg, body #title, body .svg-pie-percent {
     width: 260px;
     height: 260px;
     position: absolute;
     top: 0;
     left: 0; }
-  body .panes #percent, body .panes #title, body .panes .svg-pie-percent {
+  body #percent, body #title, body .svg-pie-percent {
     line-height: 20px;
     height: 20px;
     width: 100%;
@@ -4735,7 +4733,7 @@ body {
     text-align: center;
     color: #3da08d;
     opacity: 0.8; }
-  body .panes p, body .panes .btn {
+  body p, body .btn {
     position: relative;
     left: 220px;
     width: 200px;
@@ -4743,7 +4741,7 @@ body {
     text-transform: uppercase;
     font-size: 24px;
     top: 30px; }
-  body .panes .btn {
+  body .btn {
     text-align: center;
     background: #5fc2af;
     color: #fff;
@@ -4751,7 +4749,7 @@ body {
     height: 37px;
     line-height: 37px;
     cursor: pointer; }
-  body .panes input {
+  body input {
     border: 0;
     outline: 0;
     border-bottom: 1px solid #eee;
@@ -4759,41 +4757,47 @@ body {
     font-size: 24px;
     text-transform: capitalise;
     background: transparent; }
-  body .panes .column, body .panes .columns {
-    margin-bottom: 2rem; }
-  body .panes .inner-column {
+  body .inner-column {
+    margin-bottom: 1rem;
     border: 1px solid #e9e9e9;
     border-bottom: 10px solid #4D9E69;
     border-radius: 0;
     position: relative;
     transition: all 400ms ease; }
-    body .panes .inner-column.active-child {
+    body .inner-column > * {
+      padding: 1rem; }
+    body .inner-column strong {
+      display: inline-block; }
+    body .inner-column.small {
+      min-height: 100px; }
+    body .inner-column.active-child {
       transform: scale(1.1, 1.1);
       color: #5B5B5B; }
-  body .panes .panel-main-container {
+  body .panel-main-container {
     text-align: center; }
-  body .panes .title {
+  body .title {
     padding: 1rem;
     font-size: 1.5rem; }
-    body .panes .title .fa-filter {
+    body .title .fa-filter {
       float: right; }
-  body .panes .completeness {
-    font-size: 3rem; }
-  body .panes .listing {
+  body .completeness {
+    font-size: 3rem;
+    padding: 1rem; }
+  body .listing {
     counter-reset: li;
     margin-left: 0;
     padding-left: 0;
     padding: 15px;
     margin-bottom: 0; }
-    body .panes .listing > li {
+    body .listing > li {
       position: relative;
       margin: 0 0 6px 2em;
       padding: 4px 8px;
       list-style: none;
       border-bottom: 2px solid #d3d3d3; }
-    body .panes .listing > li:last-child {
+    body .listing > li:last-child {
       border-bottom: none; }
-    body .panes .listing > li:before {
+    body .listing > li:before {
       content: counter(li);
       counter-increment: li;
       position: absolute;
@@ -4811,36 +4815,36 @@ body {
       border-radius: 20px;
       top: 26%;
       width: 37px; }
-  body .panes .card {
+  body .card {
     margin-top: 20px;
     margin-bottom: 20px; }
-    body .panes .card .objective-title {
+    body .card .objective-title {
       line-height: 1rem; }
-      body .panes .card .objective-title a {
+      body .card .objective-title a {
         color: #000; }
-    body .panes .card .plan {
+    body .card .plan {
       color: #5B5B5B; }
-  body .panes .maintenance-complete-form {
+  body .maintenance-complete-form {
     float: right; }
-  body .panes .maintenance-complete {
+  body .maintenance-complete {
     background: transparent;
     border: none;
     font-size: 2.5rem;
     color: #4D9E69;
     float: right;
     width: 40px; }
-  body .panes .alert .fa {
+  body .alert .fa {
     color: #5B5B5B;
     float: right;
     font-size: 2.5em;
     margin-right: 3px; }
-  body .panes .alert.overdue .fa {
+  body .alert.overdue .fa {
     color: red; }
-  body .panes .start {
+  body .start {
     font-size: 2rem; }
-  body .panes .end {
+  body .end {
     display: none; }
-  body .panes .complete {
+  body .complete {
     color: #008000; }
   body .posts .portfolioFilter {
     margin-bottom: 15px; }
