--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,10 +35,10 @@ body {
 
 
     h1 {
-      font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+      // font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
       // font-size: 92px;
       font-size: 3rem;
-      padding: 30px 50px 40px 50px;
+      padding: 30px;
       text-align: center;
       text-transform: uppercase;
       text-rendering: optimizeLegibility;
@@ -47,36 +47,36 @@ body {
         color: #131313;
         background-color: #e7e5e4;
         letter-spacing: .15em;
-        text-shadow:
-          1px -1px 0 #767676,
-          -1px 2px 1px #737272,
-          -2px 4px 1px #767474,
-          -3px 6px 1px #787777,
-          -4px 8px 1px #7b7a7a,
-          -5px 10px 1px #7f7d7d,
-          -6px 12px 1px #828181,
-          -7px 14px 1px #868585,
-          -8px 16px 1px #8b8a89,
-          -9px 18px 1px #8f8e8d,
-          -10px 20px 1px #949392,
-          -11px 22px 1px #999897,
-          -12px 24px 1px #9e9c9c,
-          -13px 26px 1px #a3a1a1,
-          -14px 28px 1px #a8a6a6,
-          -15px 30px 1px #adabab,
-          -16px 32px 1px #b2b1b0,
-          -17px 34px 1px #b7b6b5,
-          -18px 36px 1px #bcbbba,
-          -19px 38px 1px #c1bfbf,
-          -20px 40px 1px #c6c4c4,
-          -21px 42px 1px #cbc9c8,
-          -22px 44px 1px #cfcdcd,
-          -23px 46px 1px #d4d2d1,
-          -24px 48px 1px #d8d6d5,
-          -25px 50px 1px #dbdad9,
-          -26px 52px 1px #dfdddc,
-          -27px 54px 1px #e2e0df,
-          -28px 56px 1px #e4e3e2;
+        // text-shadow:
+        //   1px -1px 0 #767676,
+        //   -1px 2px 1px #737272,
+        //   -2px 4px 1px #767474,
+        //   -3px 6px 1px #787777,
+        //   -4px 8px 1px #7b7a7a,
+        //   -5px 10px 1px #7f7d7d,
+        //   -6px 12px 1px #828181,
+        //   -7px 14px 1px #868585,
+        //   -8px 16px 1px #8b8a89,
+        //   -9px 18px 1px #8f8e8d,
+        //   -10px 20px 1px #949392,
+        //   -11px 22px 1px #999897,
+        //   -12px 24px 1px #9e9c9c,
+        //   -13px 26px 1px #a3a1a1,
+        //   -14px 28px 1px #a8a6a6,
+        //   -15px 30px 1px #adabab,
+        //   -16px 32px 1px #b2b1b0,
+        //   -17px 34px 1px #b7b6b5,
+        //   -18px 36px 1px #bcbbba,
+        //   -19px 38px 1px #c1bfbf,
+        //   -20px 40px 1px #c6c4c4,
+        //   -21px 42px 1px #cbc9c8,
+        //   -22px 44px 1px #cfcdcd,
+        //   -23px 46px 1px #d4d2d1,
+        //   -24px 48px 1px #d8d6d5,
+        //   -25px 50px 1px #dbdad9,
+        //   -26px 52px 1px #dfdddc,
+        //   -27px 54px 1px #e2e0df,
+        //   -28px 56px 1px #e4e3e2;
       }
       &.deepshadow {
         color: #e0dfdc;
@@ -354,198 +354,205 @@ body {
         }
     }
 
-    .panes {
+    // .panes {
 
-        @import "panes/paneSVG";
+    @import "panes/paneSVG";
 
-        .grid-sizer, .grid-item {
-          width: 49%;
-        }
-        .pane {
-          width: 49%;
-          margin-bottom: 1rem;
-          background: white;
-        }
-        .container {
-          width: 260px;
-          height: 260px;
-          position: relative;
-          margin: auto;
-          font-family: 'Share Tech', sans-serif;
-          color: #444;
-          margin-top: 2rem;
-          margin-bottom: 3rem;
-        }
+    .grid-sizer, .grid-item {
+      width: 49%;
+    }
+    .pane {
+      width: 49%;
+      margin-bottom: 1rem;
+      background: white;
+    }
+    .container {
+      width: 260px;
+      height: 260px;
+      position: relative;
+      margin: auto;
+      font-family: 'Share Tech', sans-serif;
+      color: #444;
+      margin-top: 2rem;
+      margin-bottom: 3rem;
+    }
 
-        #percent, svg, #title, .svg-pie-percent {
-          width: 260px;
-          height: 260px;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
+    #percent, svg, #title, .svg-pie-percent {
+      width: 260px;
+      height: 260px;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
 
-        #percent, #title, .svg-pie-percent {
-          line-height: 20px;
-          height: 20px;
-          width: 100%;
-          top: 120px;
-          font-size: 43px;
-          text-align: center;
-          color: #3da08d;
-          opacity: 0.8
-        }
+    #percent, #title, .svg-pie-percent {
+      line-height: 20px;
+      height: 20px;
+      width: 100%;
+      top: 120px;
+      font-size: 43px;
+      text-align: center;
+      color: #3da08d;
+      opacity: 0.8
+    }
 
-        p, .btn {
-          position: relative;
-          left: 220px;
-          width: 200px;
-          display: block;
-          text-transform: uppercase;
-          font-size: 24px;
-          top: 30px;
-        }
+    p, .btn {
+      position: relative;
+      left: 220px;
+      width: 200px;
+      display: block;
+      text-transform: uppercase;
+      font-size: 24px;
+      top: 30px;
+    }
 
-        .btn {
-          text-align: center;
-          background: #5fc2af;
-          color: #fff;
-          width: 120px;
-          height: 37px;
-          line-height: 37px;
-          cursor: pointer;
-        }
+    .btn {
+      text-align: center;
+      background: #5fc2af;
+      color: #fff;
+      width: 120px;
+      height: 37px;
+      line-height: 37px;
+      cursor: pointer;
+    }
 
-        input {
-          border: 0;
-          outline: 0;
-          border-bottom: 1px solid #eee;
-          width: 30px;
-          font-size: 24px;
-          text-transform: capitalise;
-          background: transparent;
-        }
+    input {
+      border: 0;
+      outline: 0;
+      border-bottom: 1px solid #eee;
+      width: 30px;
+      font-size: 24px;
+      text-transform: capitalise;
+      background: transparent;
+    }
 
-        .column {
-            margin-bottom: 2rem;
+    .inner-column {
+        margin-bottom: 1rem;
+        border: 1px solid $lightGrey;
+        border-bottom: 10px solid $pastilleGreen3;
+        border-radius: 0;
+        position: relative;
+        transition: all 400ms ease;
+        > * {
+          padding: 1rem;
         }
+        strong {
+          display: inline-block;
+        }
+        &.small {
+          min-height: 100px;
+        }
+        &.active-child {
+            transform: scale(1.1,1.1);
+            color: $textColorActive;
 
-        .inner-column {
-            border: 1px solid $lightGrey;
-            border-bottom: 10px solid $pastilleGreen3;
-            border-radius: 0;
-            position: relative;
-            transition: all 400ms ease;
-            &.active-child {
-                transform: scale(1.1,1.1);
-                color: $textColorActive;
-
-            }
-        }
-
-        .panel-main-container {
-            text-align: center;
-        }
-        .title {
-            padding:1rem;
-            font-size: 1.5rem;
-            .fa-filter {
-                float: right;
-            }
-        }
-        .completeness {
-            font-size:3rem;
-        }
-
-        .listing {
-            counter-reset: li;
-            margin-left: 0;
-            padding-left: 0;
-            padding:15px;
-            margin-bottom: 0;
-            > li {
-                position: relative;
-                margin: 0 0 6px 2em;
-                padding: 4px 8px;
-                list-style: none;
-                border-bottom: 2px solid $globalBorderColor;
-            }
-            > li:last-child {
-                border-bottom: none;
-            }
-            > li:before {
-                content:counter(li);
-                counter-increment:li;
-                position:absolute;
-                top:-2px;
-                left: -2.3em;
-                box-sizing:border-box;
-                width:2em;
-                margin-right:8px;
-                padding: 4px;
-                border: 2px solid $globalBorderColor;
-                color: $numberColor;
-                background: $white;
-                font-weight:bold;
-                text-align: center;
-                border-radius:20px;
-                top: 26%;
-                width: 37px;
-            }
-        }
-
-        .card {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            .objective-title {
-                line-height: 1rem;
-                a {
-                    color: #000;
-                }
-            }
-            .plan {
-                color: $darkGrey;
-            }
-        }
-
-        .maintenance-complete-form {
-            float: right;
-        }
-
-        .maintenance-complete {
-            background: transparent;
-            border: none;
-            font-size: 2.5rem;
-            color: $hintColor;
-            float: right;
-            width: 40px;
-        }
-
-        .alert {
-            .fa {
-                color: $darkGrey;
-                float: right;
-                font-size: 2.5em;
-                margin-right: 3px;
-            }
-            &.overdue {
-                .fa {
-                    color: red;
-
-                }
-            }
-        }
-
-        .start {
-            font-size: 2rem;
-        }
-        .end {
-            display: none;
-        }
-        .complete {
-            color: $complete;
         }
     }
+
+    .panel-main-container {
+        text-align: center;
+    }
+    .title {
+        padding:1rem;
+        font-size: 1.5rem;
+        .fa-filter {
+            float: right;
+        }
+    }
+    .completeness {
+        font-size:3rem;
+        padding: 1rem;
+    }
+
+    .listing {
+        counter-reset: li;
+        margin-left: 0;
+        padding-left: 0;
+        padding:15px;
+        margin-bottom: 0;
+        > li {
+            position: relative;
+            margin: 0 0 6px 2em;
+            padding: 4px 8px;
+            list-style: none;
+            border-bottom: 2px solid $globalBorderColor;
+        }
+        > li:last-child {
+            border-bottom: none;
+        }
+        > li:before {
+            content:counter(li);
+            counter-increment:li;
+            position:absolute;
+            top:-2px;
+            left: -2.3em;
+            box-sizing:border-box;
+            width:2em;
+            margin-right:8px;
+            padding: 4px;
+            border: 2px solid $globalBorderColor;
+            color: $numberColor;
+            background: $white;
+            font-weight:bold;
+            text-align: center;
+            border-radius:20px;
+            top: 26%;
+            width: 37px;
+        }
+    }
+
+    .card {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        .objective-title {
+            line-height: 1rem;
+            a {
+                color: #000;
+            }
+        }
+        .plan {
+            color: $darkGrey;
+        }
+    }
+
+    .maintenance-complete-form {
+        float: right;
+    }
+
+    .maintenance-complete {
+        background: transparent;
+        border: none;
+        font-size: 2.5rem;
+        color: $hintColor;
+        float: right;
+        width: 40px;
+    }
+
+    .alert {
+        .fa {
+            color: $darkGrey;
+            float: right;
+            font-size: 2.5em;
+            margin-right: 3px;
+        }
+        &.overdue {
+            .fa {
+                color: red;
+
+            }
+        }
+    }
+
+    .start {
+        font-size: 2rem;
+    }
+    .end {
+        display: none;
+    }
+    .complete {
+        color: $complete;
+    }
+    // }
 
     .posts {
         .portfolioFilter {
