--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2174,7 +2174,8 @@ select {
   margin: none;
   font-size: 0.9rem;
   background-color: #4D9E69;
-  color: #fefefe; }
+  color: #fefefe;
+  width: 100%; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
   .button:hover, .button:focus {
@@ -2402,7 +2403,7 @@ select {
 
 .breadcrumbs {
   list-style: none;
-  margin: 0 0 1rem 0; }
+  margin: 1rem 0 1rem 0; }
   .breadcrumbs::before, .breadcrumbs::after {
     content: ' ';
     display: table; }
@@ -4483,6 +4484,8 @@ body {
     font-weight: bold;
     vertical-align: middle;
     display: inline-block; }
+  body .heading {
+    background-color: #e9e9e9; }
   body h1 {
     font-size: 3rem;
     padding: 30px;
@@ -4491,7 +4494,6 @@ body {
     text-rendering: optimizeLegibility; }
     body h1.elegantshadow {
       color: #131313;
-      background-color: #e7e5e4;
       letter-spacing: .15em; }
     body h1.deepshadow {
       color: #e0dfdc;
@@ -4651,11 +4653,7 @@ body {
   body .callout-inner {
     border: 1px solid rgba(10, 10, 10, 0.25); }
   body .delete .fa {
-    font-size: 3rem;
-    padding: 10px;
-    margin-bottom: 1rem; }
-  body .delete form {
-    margin-top: -45px; }
+    font-size: 2rem; }
   body .cross__svg {
     border-radius: 50%;
     display: block;
@@ -4821,7 +4819,9 @@ body {
     body .card .objective-title {
       line-height: 1rem; }
       body .card .objective-title a {
-        color: #000; }
+        color: #000;
+        display: inline-block;
+        width: 80%; }
     body .card .plan {
       color: #5B5B5B; }
   body .maintenance-complete-form {
@@ -4832,11 +4832,12 @@ body {
     font-size: 2.5rem;
     color: #4D9E69;
     float: right;
-    width: 40px; }
+    width: 40px;
+    padding: 0; }
   body .alert .fa {
     color: #5B5B5B;
     float: right;
-    font-size: 2.5em;
+    font-size: 2em;
     margin-right: 3px; }
   body .alert.overdue .fa {
     color: red; }
@@ -5034,6 +5035,14 @@ body {
     transition: opacity .5s; }
     .tv .screen.active {
       opacity: 1; }
+
+.follow-details {
+  margin-top: 35px; }
+  .follow-details h2 {
+    font-size: 1.2rem;
+    margin-bottom: 0; }
+  .follow-details .follow-value {
+    font-size: 1.8rem; }
 
 .follow-search #find-user {
   margin-bottom: 2px; }
